--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # NOTE! Please use 'git ls-files -i --exclude-standard'
 # command after changing this file, to see if there are
 # any tracked files which get ignored after the change.
+
+# KSU
+drivers/kernelsu
+
 #
 # Normal rules (sorted alphabetically)
 #
