--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
                        model=${{ matrix.model }} \
                        name="Cruel-devel"        \
                        toolchain=$TOOLCHAIN      \
-                       +magisk=delta             \
+                       +magisk=delta-beta        \
                        +nohardening              \
                        +ttl                      \
                        +wireguard                \
