--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        model: [ "G970F,G973F,G975F" ]
+        model: [ "G975F" ]
 
     steps:
       - uses: actions/checkout@v3
@@ -70,6 +70,7 @@ jobs:
                        +boeffla_wl_blocker       \
                        +overlayfs                \
                        +kernelsu                 \
+                       +1000hz                   \
           2>&1 | tee config.info
 
       - name: Install gcc-aarch64-linux-gnu
