--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
                        model=${{ matrix.model }} \
                        name="Cruel-devel"        \
                        toolchain=$TOOLCHAIN      \
-                       +magisk=delta-beta        \
+                       +magisk=delta-1q23lyc45   \
                        +nohardening              \
                        +ttl                      \
                        +wireguard                \
