Change kernel name to Cruel-delta-devel

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           set -e -o pipefail
           ./cruelbuild config                    \
                        model=${{ matrix.model }} \
-                       name="Cruel-devel"        \
+                       name="Cruel-delta-devel"        \
                        toolchain=$TOOLCHAIN      \
                        +magisk=delta-1q23lyc45   \
                        +nohardening              \
